# chezmoi

./: .capslock-summary.json  .capslock-summary.yaml  .cirrus.yml  .ecrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .markdownlint-cli2.yaml  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  FAQ.md  HOW-TO.md  LICENSE  Makefile  README.md  REFERENCE.md  SECURITY.md  TUTORIAL.md  appveyor.yml  book.min.134b70e5316650a530cb42e4e8630b2a01d532bebfc0337028211175336e4806.css  book.min.2bc2364a4a4b31f0ec1debecf0a8f90a840821f143dfe1ac6a0f7cbcbdcf64ac.css  book.min.3e90539cf7130f0a89ba2f8b9f54ac5e5ecdd1fa345b6c8e3e5a83ec6f19ec8e.css  book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css  book.min.958cea7827621d6fbcb3acf091344c3e44e3d2a9428f9c3c38bb9eb37bf8c45d.css  book.min.a8b61185b89b0e211122339c7efd1c8edaa4ad4c0ae65f0074e99a4b31c1e393.css  book.min.dcb5f88ae9cbea1ffe9da7a510c09e799304f04d2a33302b20bf31dedb3b7778.css  book.min.e935e20bd0d469378cb482f0958edf258c731a4f895dccd55799c6fbc8043f23.css  chezmoi.spec.tmpl  en.search-data.min.040cac1f7d271fdc0dee3395ed236790e215509ee441267af88004b0ba1e2eb2.js  en.search-data.min.06f2d2e50f6287688a09464a18f5948602fc75f73823a54364471758fa898f67.json  en.search-data.min.096e592aa175058d79683fccf8650a26eba52fdb8cda159ee5d06ca52ead93e9.json  en.search-data.min.09807a6a94567faa074df17a398b3af2370539c1799b3903859788563ec2bafa.json  en.search-data.min.10e4bb0888643e14c4918991dadab917b56c5ee53ce339e40d9344ebb6254eb3.js  en.search-data.min.11c0af5f4c2e48fd0c6cf1c1ef89f47ffb0f917edebfa14a2a21f5418b8f4e8f.js  (+202 more)
.config/: capslock-summary.json  golangci.yml  goreleaser.yaml
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
.devcontainer/library-scripts/: README.md  common-debian.sh  go-debian.sh  node-debian.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.md  01_support_request.md  02_feature_request.md  03_bug_report.md  bug-report.md  bug_report.md  feature_request.md  support_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-docs.yml  chezmoi.yml  clear-pr-caches.yml  (+18 more)
assets/: .gitignore  requirements.dev.txt  requirements.txt  ruff.toml
categories/: index.html  index.xml
chezmoi.io/: .gitignore  Makefile  config.toml  make-gh-pages.sh
chezmoi2/: main.go  main_test.go
cmd/: add.go  add_test.go  addcmd.go  addcmd_test.go  apply.go  apply_posix_test.go  apply_test.go  apply_test_other.go  apply_test_posix.go  apply_test_windows.go  apply_windows_test.go  applycmd.go  applycmd_test.go  archive.go  archive_test.go  archivecmd.go  autobool.go  bitwarden.go  bitwardentemplatefuncs.go  cat.go  catcmd.go  cd.go  cd_posix.go  cd_windows.go  cgo.go  chattr.go  chattr_test.go  chattrcmd.go  cmd-packr.go  cmd.go  cmd_test.go  completion.go  config.go  config_other.go  config_posix.go  config_test.go  config_windows.go  data.go  data_linux.go  data_linux_test.go  (+153 more)
comparison-table/: index.html
completions/: chezmoi-completion.bash  chezmoi.fish  chezmoi.ps1  chezmoi.zsh
developer-guide/: index.html
docs/: ARCHITECTURE.md  CHANGES.md  COMPARISON.md  CONTRIBUTING.md  EXPLANATION.md  FAQ.md  HOWTO.md  INSTALL.md  MEDIA.md  QUICKSTART.md  REFERENCE.md  RELATED.md  SECURITY.md  TEMPLATING.md  TUTORIAL.md  docs.go  index.html  index.xml
goreleaser/: goreleaser.snap.yaml  goreleaser.yaml.tmpl
images/: logotype_black.ai
install/: index.html
license/: index.html
links/: links.yaml
migrating-from-another-dotfile-manager/: index.html
packrd/: packed-packr.go
quick-start/: index.html
reference/: index.html
scripts/: install.sh  stow-to-chezmoi.sh
search/: search_index.json
tags/: index.html  index.xml
user-guide/: index.html
what-does-chezmoi-do/: index.html
why-use-chezmoi/: index.html
(+2513 files in other folders)
